# rt-translator

./: .gitignore  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  design-guidelines.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  specs.md  system-architecture.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  device.rs  mod.rs  resampler.rs  types.rs  vad.rs
src-tauri/src/commands/: audio.rs  export.rs  meeting.rs  mod.rs  notes.rs  overlay.rs  settings.rs  stt.rs  translation.rs
src-tauri/src/notes/: memo_builder.rs  mod.rs  note_engine.rs  note_types.rs  ollama_summarizer.rs  prompt_templates.rs  summarizer.rs
src-tauri/src/providers/: mod.rs  ollama.rs  ollama_error.rs  ollama_types.rs  traits.rs
src-tauri/src/storage/: migrations.rs  mod.rs  models.rs  note_store.rs  transcript_store.rs
src-tauri/src/stt/: mod.rs  model_manager.rs  pipeline.rs  whisper.rs
src-tauri/src/translation/: mod.rs  pipeline.rs  translation_types.rs
src/components/: app-layout.tsx  audio-device-selector.tsx  export-button.tsx  memo-export-button.tsx  note-card.tsx  notes-panel.tsx  settings-panel.tsx  transcript-panel.tsx  transcript-timeline.tsx
src/hooks/: use-audio-capture.ts  use-note-events.ts  use-stt-events.ts  use-tauri-events.ts  use-translation-events.ts
src/overlay/: caption-overlay-window.tsx  overlay-main.tsx  (+1 more)
(+3 files in other folders)
