[package]
name = "rt-translator"
version = "0.1.0"
description = "Real-Time Multilingual Meeting Translator & Notetaker"
authors = []
edition = "2021"

[lib]
name = "rt_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Storage (direct rusqlite access for Rust-side DB operations)
rusqlite = { version = "0.32", features = ["bundled"] }

# Audio capture
cpal = "0.17"
rubato = "1"
audioadapter-buffers = "2"
crossbeam = "0.8"

# STT (Speech-to-Text)
whisper-rs = "0.15.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
